# Etransportation_models

./: .gitignore  Charging_behavior_discrete_choice_function.ipynb  Charging_demand_simulation.ipynb  Example.ipynb  Example_COPY.ipynb  Main_run_simulation_All.ipynb  README.md  Solution_solvers.ipynb  TEST.ipynb  pyproject.toml
etransportmodel/: charging_choice.py  charging_demand.py  optimization_solvers.py
example_data/: EV_trip.p
src/etransportmodel/: charging_choice.py  charging_demand.py  charging_placement.py  constants.py  optimization_solvers.py  trip_data.py
